updates again, fixed spacing, etc

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -175,6 +175,7 @@ margin-bottom: 8px;
 /* About Me section styling */
 #about {
   padding: 6rem 0;
+  padding-top: 30px;
 }
 
 .tech-icons {
